Revert "revert #567 (update to java 21) and some minor adjustments"
This reverts commit 4c6170b092891d55e83f331ef040979412dfccbc.